--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,7 +54,9 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\scripts\CameraMovement.cs" />
+     <Compile Include="Assets\scripts\CameraProjection.cs" />
      <Compile Include="Assets\scripts\CameraRotation.cs" />
+     <Compile Include="Assets\scripts\CameraSwitch.cs" />
  <Reference Include="Unity.TextMeshPro.Editor">
  <HintPath>C:/Users/Guga/Desktop/pp3/pg-pp3/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
  </Reference>
