manager, switch de câmeras e animações

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -57,6 +57,7 @@
      <Compile Include="Assets\scripts\CameraProjection.cs" />
      <Compile Include="Assets\scripts\CameraRotation.cs" />
      <Compile Include="Assets\scripts\CameraSwitch.cs" />
+     <Compile Include="Assets\scripts\HelicopterMovement.cs" />
  <Reference Include="Unity.TextMeshPro.Editor">
  <HintPath>C:/Users/Guga/Desktop/pp3/pg-pp3/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
  </Reference>
